# UofC-CPSC-457-Spring-2021

./: .gitignore  CMakeLists.txt  README.md
Assignment1/: Makefile  dup.py  fast-pali.cpp  palindrome.py  slow-pali.cpp
Assignment2/: digester.cpp  digester.h  dirstats.py  getDirStats.cpp  getDirStats.h  main.cpp
Assignment3/detectPrimes/: detectPrimes.cpp  detectPrimes.h  main.cpp
Assignment3/pi-calc/: calcpi.cpp  main.cpp
Assignment4/deadlock-detect/: common.h  deadlock_detector.cpp  deadlock_detector.h  main.cpp
Assignment4/scheduler/: common.cpp  common.h  main.cpp  scheduler.cpp  scheduler.h
Assignment5/fatsim/: fatsim.cpp  fatsim.h  fatsim.py  gen.py  main.cpp
Assignment5/memsim/: gen1.py  main.cpp  memsim.cpp  memsim.h  memsim.py
